--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 							<header>
 								<h1><a href="index.html" id="logo">Call Me Kev.in</a></h1>
 								<hr />
-								<p><!--[-->Developer. Attorney. Guys who likes coffee.<!--]--></p>
+								<p><!--[-->Developer. Attorney. Guy who likes coffee.<!--]--></p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#portfolio" class="button circled scrolly">Start</a>
 							</footer>
 						</div>
 
@@ -35,11 +35,12 @@
 						<nav id="nav">
 							<ul>
 								<li>
+                  <!-- Menu (Katakana) -->
 									<a href="#">&#12513;&#12491;&#12517;&#12540;</a>
 									<ul>
-										<li><a href="#">Pitch</a></li>
-										<li><a href="#banner" class="scrolly">Portfolio</a></li>
-										<li><a href="#">Contact</a></li>
+										<li><a href="#portfolio" class="scrolly">Portfolio</a></li>
+                    <li><a href="#" class="scrolly">Coffee</a></li>
+										<li><a href="#contact" class="scrolly">Contact</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -48,7 +49,7 @@
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="portfolio">
 					<header>
 						<h2><!--[-->Hi. You're looking at <strong>Helios</strong>.<!--]--></h2>
 						<p>
@@ -224,7 +225,7 @@
 						<div class="row">
 
 							<!-- Tweets -->
-								<section class="4u 12u(mobile)">
+								<section class="6u 12u(mobile)">
 									<header>
 										<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
 									</header>
@@ -256,7 +257,7 @@
 									</ul>
 								</section>
 
-							<!-- Posts -->
+							<!-- Posts
 								<section class="4u 12u(mobile)">
 									<header>
 										<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
@@ -295,26 +296,29 @@
 											</article>
 										</li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Photos -->
-								<section class="4u 12u(mobile)">
+								<section class="6u 12u(mobile)">
 									<header>
 										<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
 									</header>
 									<div class="row 25%">
+                    <!-- 1 & 2 -->
 										<div class="6u">
 											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="6u$">
 											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
 										</div>
+                    <!-- 3 & 4 -->
 										<div class="6u">
 											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
 										</div>
 										<div class="6u$">
 											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
 										</div>
+                    <!-- 5 & 6 -->
 										<div class="6u">
 											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
 										</div>
@@ -330,7 +334,7 @@
 							<div class="12u">
 
 								<!-- Contact -->
-									<section class="contact">
+									<section id="contact" class="contact">
 										<header>
 											<h3>Nisl turpis nascetur interdum?</h3>
 										</header>
