removed features section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kevin White</title>
+		<title>CallMeKev.in</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -175,7 +175,7 @@
 
 				</div>
 
-			<!-- Features -->
+			<!-- Features 
 				<div class="wrapper style1">
 
 					<section id="features" class="container special">
@@ -217,7 +217,7 @@
 						</div>
 					</section>
 
-				</div>
+				</div> -->
 
 			<!-- Footer -->
 				<div id="footer">
