--- a/index.html
+++ b/index.html
@@ -166,23 +166,23 @@
 								<!-- Contact -->
 									<section id="contact" class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>Wanna know more?</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>Pick your poison.</p>
 										<ul class="icons">
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.github.com/kwhitejr" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-											<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li> -->
-											<li><a href="#" class="icon fa-envelope-o"><span class="label">E-Mail</span></a></li> 
+											<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 											<li><a href="https://www.linkedin.com/in/kwhitejr" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+											<li><a href="#" class="icon fa-envelope-o"><span class="label">E-Mail</span></a></li> 
+											<li><a href="#" class="icon fa-android"><span class="label">Android</span></a></li> 
 										</ul>
 									</section>
 
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Kevin White. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
